2014-04-30  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* nscd/nscd-client.h (datahead_init_common, datahead_init_pos,
	datahead_init_neg): New functions.
	* nscd/aicache.c (addhstaiX): Use them.
	* nscd/grpcache.c (cache_addgr): Likewise.
	* nscd/hstcache.c (cache_addhst): Likewise.
	* nscd/initgrcache.c (addinitgroupsX): Likewise.
	* nscd/netgroupcache.c (do_notfound): Likewise.
	(addgetnetgrentX): Likewise.
	(addinnetgrX): Likewise.
	* nscd/pwdcache.c (cache_addpw): Likewise.
	* nscd/servicescache.c (cache_addserv): Likewise.

2014-04-30  Siddhesh Poyarekar  <siddhesh@redhat.com>
	    Atsushi Onoe  <atsushi@onoe.org>

	[BZ #14308]
	[BZ #12994]
	[BZ #13651]
	* resolv/res_query.c (__libc_res_nsearch): Return if at least
	one response is valid.
	* resolv/res_send.c (send_dg): Check for validity of other
	response if the current response is a referral.

2014-04-29  Steve Ellcey  <sellcey@mips.com>

	* iconv/skeleton.c (ONE_DIRECTION): Set default value if not set.

2014-04-29  Stefan Liebler  <stli@linux.vnet.ibm.com>

	[BZ #16823]
	* sysdeps/ieee754/ldbl-128/s_log1pl.c (__log1pl):
	Always divide by positive zero when computing -Inf result.
	* sysdeps/ieee754/dbl-64/s_log1p.c (__log1p): Likewise.
	* sysdeps/ieee754/flt-32/s_log1pf.c (__log1pf): Likewise.

2014-04-28  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/fpu/fclrexcpt.c (__feclearexcept): Do not update
	FPSCR if value do not change.
	* sysdeps/powerpc/fpu/fedisblxcpt.c (fedisableexcept): Likewise.
	* sysdeps/powerpc/fpu/feenablxcpt.c (feenableexcept): Likewise.
	* sysdeps/powerpc/fpu/feholdexcpt.c (feholdexcept): Likewise.
	* sysdeps/powerpc/fpu/fesetenv.c (__fesetenv): Likewise.
	* sysdeps/powerpc/fpu/fsetexcptflg.c (__fesetexceptflag): Likewise.
	* sysdeps/powerpc/fpu/fenv_libc.h (fenv_reg_to_exceptions): New helper
	function.

2014-05-29  Carlos O'Donell  <carlos@systemhalted.org>

	* sysdeps/hppa: Move directory from ports/sysdeps/hppa.